2011-11-28  William A. Perkins  <william.perkins@pnnl.gov>

	* test/temperature/pond/scalar_source.dat: change exchange
	coefficients to see if it makes any difference

	* energy_flux_module.f90: the various tunable coefficients are now
	externally and passed in; this is now identical to the code in
	MASS1 

	* temperature_source.f90 (temperature_source): add exchange
	coefficients to temperature_source_rec
	(temperature_parse_options): parse exchange coefficients
	(temperature_source_term): use exchange coefficients

	* block_hydro.f90 (velocity_shift): owned window indexes were
	incorrect -- fixed 'em

2011-11-21  William A. Perkins  <william.perkins@pnnl.gov>

	* mass2_parallel.f90 (mass2_parallel): select number of digits in
	output file names based on total number of processors

2011-11-07  William A Perkins  <d3g096@olympus.local>

	* hydro_solve.f90 (harmonic): try to make faster
	(uvel_solve, vvel_solve): reduce the number of calls to harmonic() 
	(linear_friction): use c*c instead of c**2; don't check depth

	* solver_petsc.F90 (solver_global_index): return -1 if the
	specified i, j are outside the global window
	(solver_map_indexes): create an index map
	(solver_initialize_block): use solver_map_indexes instead of a
	VecScatter
	(solver): use mapped global indexes

2011-11-01  William A. Perkins  <william.perkins@pnnl.gov>

	* solver_petsc.F90 (solver_global_index): check i and j to make
	sure they're in range; if not return a bogus index
	(solver_map_indexes): added; build an array of PETSc indexes from
	MASS2 i and j indexes
	(solver_initialize_block): do not create a VecScatter, map indexes
	instead 
	(solver): use mapped indexes for assembly, do not use a VecScatter
	to get solution

	* block_hydro_bc.f90 (apply_hydro_bc): indexes used to set
	SOURCE/SINK BC's were exceeding local boundaries

2011-10-20  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (transport_precalc, scalar_solve): avoid the
	use of block_owns() 
