@@ -1,3 +1,8 @@
+2011-12-05  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* plot_cgns.f90 (plot_cgns_write): make water surface elevation a
+	default output, not diag
+
 2011-11-28  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* test/temperature/pond/scalar_source.dat: change exchange
